2014-07-01 Tsi YANG <tsi.yang@plan-net.fr>
	* Feature: Renders level of categories.

2014-04-28 Tsi YANG <tsi.yang@plan-net.fr>
	* Feature: Adds directory of categories.
	* Feature: Connected to tca fe admin.

2014-04-28 Tsi YANG <tsi.yang@plan-net.fr>
	* Feature: Updated template file 
	* Refactor: displaySearch categories with new typoscript config
	* Feature: Added restriction for process
	* Feature: Added markers for category tree parents.
	* Feature: Added category's data.

2012-06-21 Aurelien GRAYO <aurelien@in-cite.net>
	* Change extension owner to Plan.Net
	* Publication to the TER
	* Version changed to 1.1.4

2012-04-25 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Version changed to 1.1.3

2012-04-06 Tsi YANG <tsi@in-cite.net>
	* Feature: Incresed relation size and added configuration

2012-03-27 Tsi YANG <tsi@in-cite.net>
	* Feature: Added selected categories informations on search form.
	
2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Version changed to 1.1.2
	
2012-03-23 Tsi YANG  <tsi@in-cite.net>
	* Documentation: Updated with picto.
	* Comments: Cleaned comments.
	* Fix : Added sorting on retrieving categories elements.
	* Refactor : Reworked typoscript configuration to display categories.

2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: update autoload

2012-03-22 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Version changed to 1.1.1
	* Fix: add picto only if exist
	* Version changed to 1.1.2

2012-03-20 Tsi YANG  <tsi@in-cite.net>
	* Feature: Added categories pictos process
	* Feature: Added pictos in API command.

2012-03-20 Tsi YANG  <tsi@in-cite.net>
	* Feature: Added picto field
	* Fix: Mistakes in css class name

2011-05-13 In Cite Solution  <technique@in-cite.net>

	* initial code generated with kickstarter